changed project tag for FinanceFirst

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <div class="project-tags">
                 <span>C++</span>
                 <span>SQLite 3</span>
-                <span>CMake</span>
+                <span>GTK</span>
                 <span>VS Code</span>
               </div>
               <div class="project-links">
