--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a href="https://www.linkedin.com/in/babiker-babiker-15915b267/" target="_blank" rel="noopener noreferrer">
                 <img src="./assets/linkedin.png" alt="LinkedIn" class="icon" />
               </a>
-              <a href="https://github.com/your-github-profile" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/BabikerBabiker" target="_blank" rel="noopener noreferrer">
                 <img src="./assets/github.png" alt="GitHub" class="icon" />
               </a>
             </li>
