Added WordShuffle project and todo

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <img src="./assets/FinanceFirst.png" alt="FinanceFirst" class="project-thumbnail" />
               <div class="project-details">
                 <h3>FinanceFirst (On-Going)</h3>
-                <p>Banking app which allows for deposits, withdraws, and transferring of money. Uses an SQL database to effectively & securely store data.</p>
+                <p>Banking app which allows for deposits, withdraws, and transferring of money. Uses an SQLite 3 database to effectively & securely store data.</p>
                 <div class="project-tags">
                   <span>C++</span>
                   <span>SQLite 3</span>
@@ -182,6 +182,24 @@
                   <div class="project-links">
                     <a href="https://youtu.be/5oswDgrJkNk" target="_blank" rel="noopener noreferrer">Video</a>
                     <a href="https://github.com/BabikerBabiker/IceMan-Project" target="_blank" rel="noopener noreferrer">Repo</a>
+                  </div>
+                </div>
+              </div>
+              <div class="project-card">
+                <img src="./assets/wordshuffle.png" alt="GuessQuest" class="project-thumbnail" />
+                <div class="project-details">
+                  <h3>WordShuffle</h3>
+                  <p>WordShuffle reads a dictionary file, finds anagrams of a user-input string using sorting and permutation algorithms, and displays results via command line.</p>
+                  <div class="project-tags">
+                    <span>C++</span>
+                    <span>File: I/O</span>
+                    <span>Sorting</span>
+                    <span>CLI</span>
+                    <span>VS 2022</span>
+                  </div>
+                  <div class="project-links">
+                    <a href="https://youtu.be/9wJAS5VMF90" target="_blank" rel="noopener noreferrer">Video</a>
+                    <a href="https://github.com/BabikerBabiker/GuessQuest" target="_blank" rel="noopener noreferrer">Repo</a>
                   </div>
                 </div>
               </div>
