Added Disabled Links
- FinanceFirst
- MartianDB
- WordShuffle

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                   <span>VS Code</span>
                 </div>
                 <div class="project-links">
-                  <a href="https://example.com/demo" target="_blank" rel="noopener noreferrer">Video</a>
+                  <a href="" class="disabled-link" target="_blank" rel="noopener noreferrer">Video</a>
                   <a href="https://github.com/BabikerBabiker/FinanceFirst" target="_blank" rel="noopener noreferrer">Repo</a>
                 </div>
               </div>
@@ -177,7 +177,7 @@
                     <span>VS 2022</span>
                   </div>
                   <div class="project-links">
-                    <a href="https://youtu.be/5oswDgrJkNk" target="_blank" rel="noopener noreferrer">Video</a>
+                    <a href="" class="disabled-link" target="_blank" rel="noopener noreferrer">Video</a>
                     <a href="https://github.com/BabikerBabiker/MartianDB" target="_blank" rel="noopener noreferrer">Repo</a>
                   </div>
                 </div>
@@ -195,7 +195,7 @@
                     <span>VS 2022</span>
                   </div>
                   <div class="project-links">
-                    <a href="https://youtu.be/9wJAS5VMF90" target="_blank" rel="noopener noreferrer">Video</a>
+                    <a href="" class="disabled-link" target="_blank" rel="noopener noreferrer">Video</a>
                     <a href="https://github.com/BabikerBabiker/WordShuffle" target="_blank" rel="noopener noreferrer">Repo</a>
                   </div>
                 </div>
