--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--Developed By Babiker Babiker-->>
+<!--Developed By Babiker Babiker-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -100,13 +100,12 @@
                   <span>C++</span>
                   <span>OpenGL</span>
                   <span>OOP</span>
-                  <span>DS</span>
                   <span>Git</span>
                   <span>VS 2022</span>
                 </div>
                 <div class="project-links">
-                  <a href="https://youtu.be/5oswDgrJkNk" target="_blank" rel="noopener noreferrer">Video</a>
-                  <a href="https://github.com/BabikerBabiker/IceMan-Project" target="_blank" rel="noopener noreferrer">Repo</a>
+                  <a href="https://youtu.be/5oswDgrJkNk" class="video-link" target="_blank" rel="noopener noreferrer">Video</a>
+                  <a href="https://github.com/BabikerBabiker/IceMan-Project" class="repo-link" target="_blank" rel="noopener noreferrer">Repo</a>
                 </div>
               </div>
             </div>
@@ -123,7 +122,7 @@
                 </div>
                 <div class="project-links">
                   <a href="" class="disabled-link" target="_blank" rel="noopener noreferrer">Video</a>
-                  <a href="https://github.com/BabikerBabiker/FinanceFirst" target="_blank" rel="noopener noreferrer">Repo</a>
+                  <a href="https://github.com/BabikerBabiker/FinanceFirst" class="repo-link" target="_blank" rel="noopener noreferrer">Repo</a>
                 </div>
               </div>
             </div>
@@ -140,8 +139,8 @@
                   <span>Windows 11</span>
                 </div>
                 <div class="project-links">
-                  <a href="https://youtu.be/CxL9B_iu-oI" target="_blank" rel="noopener noreferrer">Video</a>
-                  <a href="https://github.com/BabikerBabiker/Currency-X-Change" target="_blank" rel="noopener noreferrer">Repo</a>
+                  <a href="https://youtu.be/CxL9B_iu-oI" class="video-link" target="_blank" rel="noopener noreferrer">Video</a>
+                  <a href="https://github.com/BabikerBabiker/Currency-X-Change" class="repo-link" target="_blank" rel="noopener noreferrer">Repo</a>
                 </div>
               </div>
             </div>
@@ -158,8 +157,8 @@
                   <span>VS 2022</span>
                 </div>
                 <div class="project-links">
-                  <a href="https://youtu.be/wvVoYRpf4lU" target="_blank" rel="noopener noreferrer">Video</a>
-                  <a href="https://github.com/babikerbabiker/validcpp" target="_blank" rel="noopener noreferrer">Repo</a>
+                  <a href="https://youtu.be/wvVoYRpf4lU" class="video-link" target="_blank" rel="noopener noreferrer">Video</a>
+                  <a href="https://github.com/babikerbabiker/validcpp" class="repo-link" target="_blank" rel="noopener noreferrer">Repo</a>
                 </div>
               </div>
             </div>
@@ -178,7 +177,7 @@
                   </div>
                   <div class="project-links">
                     <a href="" class="disabled-link" target="_blank" rel="noopener noreferrer">Video</a>
-                    <a href="https://github.com/BabikerBabiker/MartianDB" target="_blank" rel="noopener noreferrer">Repo</a>
+                    <a href="https://github.com/BabikerBabiker/MartianDB" class="repo-link" target="_blank" rel="noopener noreferrer">Repo</a>
                   </div>
                 </div>
               </div>
@@ -196,7 +195,7 @@
                   </div>
                   <div class="project-links">
                     <a href="" class="disabled-link" target="_blank" rel="noopener noreferrer">Video</a>
-                    <a href="https://github.com/BabikerBabiker/WordShuffle" target="_blank" rel="noopener noreferrer">Repo</a>
+                    <a href="https://github.com/BabikerBabiker/WordShuffle" class="repo-link"target="_blank" rel="noopener noreferrer">Repo</a>
                   </div>
                 </div>
               </div>
@@ -210,11 +209,10 @@
                   <span>OOP</span>
                   <span>CLI</span>
                   <span>VS 2022</span>
-                  <span>Windows 11</span>
                 </div>
                 <div class="project-links">
-                  <a href="https://youtu.be/9wJAS5VMF90" target="_blank" rel="noopener noreferrer">Video</a>
-                  <a href="https://github.com/BabikerBabiker/GuessQuest" target="_blank" rel="noopener noreferrer">Repo</a>
+                  <a href="https://youtu.be/9wJAS5VMF90" class="video-link" target="_blank" rel="noopener noreferrer">Video</a>
+                  <a href="https://github.com/BabikerBabiker/GuessQuest" class="repo-link" target="_blank" rel="noopener noreferrer">Repo</a>
                 </div>
               </div>
             </div>
@@ -230,8 +228,8 @@
                   <span>Windows 11</span>
                 </div>
                 <div class="project-links">
-                  <a href="https://youtu.be/_xVGM1L4liY" target="_blank" rel="noopener noreferrer">Video</a>
-                  <a href="https://github.com/BabikerBabiker/Rainfall-Calculator" target="_blank" rel="noopener noreferrer">Repo</a>
+                  <a href="https://youtu.be/_xVGM1L4liY" class="video-link" target="_blank" rel="noopener noreferrer">Video</a>
+                  <a href="https://github.com/BabikerBabiker/Rainfall-Calculator" class="repo-link" target="_blank" rel="noopener noreferrer">Repo</a>
                 </div>
               </div>
             </div>
