--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--Developed By Babiker Babiker-->>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -99,12 +100,13 @@
                   <span>C++</span>
                   <span>OpenGL</span>
                   <span>OOP</span>
+                  <span>DS</span>
                   <span>Git</span>
                   <span>VS 2022</span>
                 </div>
                 <div class="project-links">
-                  <a href="https://youtu.be/5oswDgrJkNk" class="video-link" target="_blank" rel="noopener noreferrer">Video</a>
-                  <a href="https://github.com/BabikerBabiker/IceMan-Project" class="repo-link" target="_blank" rel="noopener noreferrer">Repo</a>
+                  <a href="https://youtu.be/5oswDgrJkNk" target="_blank" rel="noopener noreferrer">Video</a>
+                  <a href="https://github.com/BabikerBabiker/IceMan-Project" target="_blank" rel="noopener noreferrer">Repo</a>
                 </div>
               </div>
             </div>
@@ -121,7 +123,7 @@
                 </div>
                 <div class="project-links">
                   <a href="" class="disabled-link" target="_blank" rel="noopener noreferrer">Video</a>
-                  <a href="https://github.com/BabikerBabiker/FinanceFirst" class="repo-link" target="_blank" rel="noopener noreferrer">Repo</a>
+                  <a href="https://github.com/BabikerBabiker/FinanceFirst" target="_blank" rel="noopener noreferrer">Repo</a>
                 </div>
               </div>
             </div>
@@ -138,8 +140,8 @@
                   <span>Windows 11</span>
                 </div>
                 <div class="project-links">
-                  <a href="https://youtu.be/CxL9B_iu-oI" class="video-link" target="_blank" rel="noopener noreferrer">Video</a>
-                  <a href="https://github.com/BabikerBabiker/Currency-X-Change" class="repo-link" target="_blank" rel="noopener noreferrer">Repo</a>
+                  <a href="https://youtu.be/CxL9B_iu-oI" target="_blank" rel="noopener noreferrer">Video</a>
+                  <a href="https://github.com/BabikerBabiker/Currency-X-Change" target="_blank" rel="noopener noreferrer">Repo</a>
                 </div>
               </div>
             </div>
@@ -156,8 +158,8 @@
                   <span>VS 2022</span>
                 </div>
                 <div class="project-links">
-                  <a href="https://youtu.be/wvVoYRpf4lU" class="video-link" target="_blank" rel="noopener noreferrer">Video</a>
-                  <a href="https://github.com/babikerbabiker/validcpp" class="repo-link" target="_blank" rel="noopener noreferrer">Repo</a>
+                  <a href="https://youtu.be/wvVoYRpf4lU" target="_blank" rel="noopener noreferrer">Video</a>
+                  <a href="https://github.com/babikerbabiker/validcpp" target="_blank" rel="noopener noreferrer">Repo</a>
                 </div>
               </div>
             </div>
@@ -176,7 +178,7 @@
                   </div>
                   <div class="project-links">
                     <a href="" class="disabled-link" target="_blank" rel="noopener noreferrer">Video</a>
-                    <a href="https://github.com/BabikerBabiker/MartianDB" class="repo-link" target="_blank" rel="noopener noreferrer">Repo</a>
+                    <a href="https://github.com/BabikerBabiker/MartianDB" target="_blank" rel="noopener noreferrer">Repo</a>
                   </div>
                 </div>
               </div>
@@ -194,7 +196,7 @@
                   </div>
                   <div class="project-links">
                     <a href="" class="disabled-link" target="_blank" rel="noopener noreferrer">Video</a>
-                    <a href="https://github.com/BabikerBabiker/WordShuffle" class="repo-link"target="_blank" rel="noopener noreferrer">Repo</a>
+                    <a href="https://github.com/BabikerBabiker/WordShuffle" target="_blank" rel="noopener noreferrer">Repo</a>
                   </div>
                 </div>
               </div>
@@ -208,10 +210,11 @@
                   <span>OOP</span>
                   <span>CLI</span>
                   <span>VS 2022</span>
+                  <span>Windows 11</span>
                 </div>
                 <div class="project-links">
-                  <a href="https://youtu.be/9wJAS5VMF90" class="video-link" target="_blank" rel="noopener noreferrer">Video</a>
-                  <a href="https://github.com/BabikerBabiker/GuessQuest" class="repo-link" target="_blank" rel="noopener noreferrer">Repo</a>
+                  <a href="https://youtu.be/9wJAS5VMF90" target="_blank" rel="noopener noreferrer">Video</a>
+                  <a href="https://github.com/BabikerBabiker/GuessQuest" target="_blank" rel="noopener noreferrer">Repo</a>
                 </div>
               </div>
             </div>
@@ -227,8 +230,8 @@
                   <span>Windows 11</span>
                 </div>
                 <div class="project-links">
-                  <a href="https://youtu.be/_xVGM1L4liY" class="video-link" target="_blank" rel="noopener noreferrer">Video</a>
-                  <a href="https://github.com/BabikerBabiker/Rainfall-Calculator" class="repo-link" target="_blank" rel="noopener noreferrer">Repo</a>
+                  <a href="https://youtu.be/_xVGM1L4liY" target="_blank" rel="noopener noreferrer">Video</a>
+                  <a href="https://github.com/BabikerBabiker/Rainfall-Calculator" target="_blank" rel="noopener noreferrer">Repo</a>
                 </div>
               </div>
             </div>
