added smooth transitioning and updated sync script

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         </nav>
       </header>
       <main class="container">
-        <section id="about">
+        <section id="about fade-in">
           <h2>About Me</h2>
           <p> Through my academic and personal experiences, I've showcased my ability to persevere through adversity. Embracing these hardships has fortified my determination to succeed academically and in my personal life. I continue to stay dedicated to my craft while on this rigorous journey. I continue to express passion for programming; I've demonstrated my ability to ensure my work is up to standard. As many more challenges are on the horizon, my ability to persevere will continue to propel me past them. </p>
         </section>
-        <section id="coursework" class="about">
+        <section id="coursework fade-in" class="about fade-in">
           <h2>Applicable Coursework</h2>
-          <table id="coursework-table">
+          <table id="coursework-table fade-in">
             <thead>
               <tr>
                 <th>Course Code</th>
@@ -79,13 +79,13 @@
             </tbody>
           </table>
         </section>
-        <section id="projects" class="projects">
+        <section id="projects fade-in" class="projects fade-in">
           <h2 class="projects-header">Projects</h2>
           <br>
           <p class="projects-desc">Hover/Click the thumbnails to expand into details & links.</p>
           <br>
-          <div class="project-cards">
-            <div class="project-card">
+          <div class="project-cards fade-in">
+            <div class="project-card fade-in">
               <img src="./assets/IceMan.png" alt="IceMan" class="project-thumbnail" />
               <div class="project-details">
                 <h3>IceMan</h3>
@@ -103,7 +103,7 @@
                 </div>
               </div>
             </div>
-            <div class="project-card">
+            <div class="project-card fade-in">
               <img src="./assets/FinanceFirst.png" alt="FinanceFirst" class="project-thumbnail" />
               <div class="project-details">
                 <h3>FinanceFirst (On-Going)</h3>
@@ -120,7 +120,7 @@
                 </div>
               </div>
             </div>
-            <div class="project-card">
+            <div class="project-card fade-in">
               <img src="./assets/CurrencyXChange.png" alt="Currency X Change" class="project-thumbnail" />
               <div class="project-details">
                 <h3>Currency X Change</h3>
@@ -138,7 +138,7 @@
                 </div>
               </div>
             </div>
-            <div class="project-card">
+            <div class="project-card fade-in">
               <img src="./assets/ValidCPP.png" alt="ValidCPP" class="project-thumbnail" />
               <div class="project-details">
                 <h3>ValidCPP</h3>
@@ -156,8 +156,8 @@
                 </div>
               </div>
             </div>
-            <div class="project-cards">
-              <div class="project-card">
+            <div class="project-cards fade-in">
+              <div class="project-card fade-in">
                 <img src="./assets/martiandb.png" alt="IceMan" class="project-thumbnail" />
                 <div class="project-details">
                   <h3>Martian Database</h3>
@@ -175,7 +175,7 @@
                   </div>
                 </div>
               </div>
-              <div class="project-card">
+              <div class="project-card fade-in">
                 <img src="./assets/wordshuffle.png" alt="GuessQuest" class="project-thumbnail" />
                 <div class="project-details">
                   <h3>WordShuffle</h3>
@@ -193,7 +193,7 @@
                   </div>
                 </div>
               </div>
-            <div class="project-card">
+            <div class="project-card fade-in">
               <img src="./assets/GuessQuest.jpg" alt="GuessQuest" class="project-thumbnail" />
               <div class="project-details">
                 <h3>GuessQuest</h3>
@@ -211,7 +211,7 @@
                 </div>
               </div>
             </div>
-            <div class="project-card">
+            <div class="project-card fade-in">
               <img src="./assets/Rainfall.png" alt="Rainfall Calculator" class="project-thumbnail" />
               <div class="project-details">
                 <h3>Rainfall Calculator</h3>
@@ -230,7 +230,7 @@
             </div>
           </div>
         </section>
-        <section id="contact" class="contact">
+        <section id="contact fade-in" class="contact fade-in">
           <h2>Contact Me</h2>
           <div class="contact-form">
             <form action="https://api.web3forms.com/submit" method="POST">
