fixed smooth transitioning

--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
             </tbody>
           </table>
         </section>
-        <section id="projects fade-in" class="projects fade-in">
+        <section id="projects" class="projects">
           <h2 class="projects-header">Projects</h2>
           <br>
           <p class="projects-desc">Hover/Click the thumbnails to expand into details & links.</p>
           <br>
-          <div class="project-cards fade-in">
-            <div class="project-card fade-in">
+          <div class="project-cards">
+            <div class="project-card">
               <img src="./assets/IceMan.png" alt="IceMan" class="project-thumbnail" />
               <div class="project-details">
                 <h3>IceMan</h3>
-                <p>Interactive game using OpenGL that allows user to mine ice, find oil, and escape protestors as its main objectives</p>
+                <p>Interactive game using OpenGL that allows user to mine ice, find oil, and escape protestors as its main objectives.</p>
                 <div class="project-tags">
                   <span>C++</span>
                   <span>OpenGL</span>
@@ -103,7 +103,7 @@
                 </div>
               </div>
             </div>
-            <div class="project-card fade-in">
+            <div class="project-card">
               <img src="./assets/FinanceFirst.png" alt="FinanceFirst" class="project-thumbnail" />
               <div class="project-details">
                 <h3>FinanceFirst (On-Going)</h3>
@@ -120,7 +120,7 @@
                 </div>
               </div>
             </div>
-            <div class="project-card fade-in">
+            <div class="project-card">
               <img src="./assets/CurrencyXChange.png" alt="Currency X Change" class="project-thumbnail" />
               <div class="project-details">
                 <h3>Currency X Change</h3>
@@ -138,7 +138,7 @@
                 </div>
               </div>
             </div>
-            <div class="project-card fade-in">
+            <div class="project-card">
               <img src="./assets/ValidCPP.png" alt="ValidCPP" class="project-thumbnail" />
               <div class="project-details">
                 <h3>ValidCPP</h3>
@@ -156,44 +156,43 @@
                 </div>
               </div>
             </div>
-            <div class="project-cards fade-in">
-              <div class="project-card fade-in">
-                <img src="./assets/martiandb.png" alt="IceMan" class="project-thumbnail" />
-                <div class="project-details">
-                  <h3>Martian Database</h3>
-                  <p>C++ application that manages a database of Martian individuals. Users can add, delete by SSN, and print entries sorted by first name, last name, or SSN.</p>
-                  <div class="project-tags">
-                    <span>C++</span>
-                    <span>OOP</span>
-                    <span>File: I/O</span>
-                    <span>CLI</span>
-                    <span>VS 2022</span>
-                  </div>
-                  <div class="project-links">
-                    <a href="" class="disabled-link" target="_blank" rel="noopener noreferrer">Video</a>
-                    <a href="https://github.com/BabikerBabiker/MartianDB" target="_blank" rel="noopener noreferrer">Repo</a>
-                  </div>
+            <div class="project-card">
+              <img src="./assets/martiandb.png" alt="Martian Database" class="project-thumbnail" />
+              <div class="project-details">
+                <h3>Martian Database</h3>
+                <p>C++ application that manages a database of Martian individuals. Users can add, delete by SSN, and print entries sorted by first name, last name, or SSN.</p>
+                <div class="project-tags">
+                  <span>C++</span>
+                  <span>OOP</span>
+                  <span>File: I/O</span>
+                  <span>CLI</span>
+                  <span>VS 2022</span>
+                </div>
+                <div class="project-links">
+                  <a href="" class="disabled-link" target="_blank" rel="noopener noreferrer">Video</a>
+                  <a href="https://github.com/BabikerBabiker/MartianDB" target="_blank" rel="noopener noreferrer">Repo</a>
                 </div>
               </div>
-              <div class="project-card fade-in">
-                <img src="./assets/wordshuffle.png" alt="GuessQuest" class="project-thumbnail" />
-                <div class="project-details">
-                  <h3>WordShuffle</h3>
-                  <p>WordShuffle reads a dictionary file, finds anagrams of a user-input string using sorting and permutation algorithms, and displays results via command line.</p>
-                  <div class="project-tags">
-                    <span>C++</span>
-                    <span>File: I/O</span>
-                    <span>Sorting</span>
-                    <span>CLI</span>
-                    <span>VS 2022</span>
-                  </div>
-                  <div class="project-links">
-                    <a href="" class="disabled-link" target="_blank" rel="noopener noreferrer">Video</a>
-                    <a href="https://github.com/BabikerBabiker/WordShuffle" target="_blank" rel="noopener noreferrer">Repo</a>
-                  </div>
+            </div>
+            <div class="project-card">
+              <img src="./assets/wordshuffle.png" alt="WordShuffle" class="project-thumbnail" />
+              <div class="project-details">
+                <h3>WordShuffle</h3>
+                <p>WordShuffle reads a dictionary file, finds anagrams of a user-input string using sorting and permutation algorithms, and displays results via command line.</p>
+                <div class="project-tags">
+                  <span>C++</span>
+                  <span>File: I/O</span>
+                  <span>Sorting</span>
+                  <span>CLI</span>
+                  <span>VS 2022</span>
+                </div>
+                <div class="project-links">
+                  <a href="" class="disabled-link" target="_blank" rel="noopener noreferrer">Video</a>
+                  <a href="https://github.com/BabikerBabiker/WordShuffle" target="_blank" rel="noopener noreferrer">Repo</a>
                 </div>
               </div>
-            <div class="project-card fade-in">
+            </div>
+            <div class="project-card">
               <img src="./assets/GuessQuest.jpg" alt="GuessQuest" class="project-thumbnail" />
               <div class="project-details">
                 <h3>GuessQuest</h3>
@@ -211,11 +210,11 @@
                 </div>
               </div>
             </div>
-            <div class="project-card fade-in">
+            <div class="project-card">
               <img src="./assets/Rainfall.png" alt="Rainfall Calculator" class="project-thumbnail" />
               <div class="project-details">
                 <h3>Rainfall Calculator</h3>
-                <p>Recieves user reported rainfall for each month and performs various tasks such as sorting, average, and total</p>
+                <p>Receives user-reported rainfall for each month and performs various tasks such as sorting, average, and total.</p>
                 <div class="project-tags">
                   <span>Java</span>
                   <span>Sorting</span>
