removed smooth transitioning

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         </nav>
       </header>
       <main class="container">
-        <section id="about fade-in">
+        <section id="about">
           <h2>About Me</h2>
           <p> Through my academic and personal experiences, I've showcased my ability to persevere through adversity. Embracing these hardships has fortified my determination to succeed academically and in my personal life. I continue to stay dedicated to my craft while on this rigorous journey. I continue to express passion for programming; I've demonstrated my ability to ensure my work is up to standard. As many more challenges are on the horizon, my ability to persevere will continue to propel me past them. </p>
         </section>
-        <section id="coursework fade-in" class="about fade-in">
+        <section id="coursework" class="about">
           <h2>Applicable Coursework</h2>
-          <table id="coursework-table fade-in">
+          <table id="coursework-table">
             <thead>
               <tr>
                 <th>Course Code</th>
@@ -79,7 +79,7 @@
             </tbody>
           </table>
         </section>
-        <section id="projects" class="projects">
+        <section id="projects" class="projects ">
           <h2 class="projects-header">Projects</h2>
           <br>
           <p class="projects-desc">Hover/Click the thumbnails to expand into details & links.</p>
@@ -229,7 +229,7 @@
             </div>
           </div>
         </section>
-        <section id="contact fade-in" class="contact fade-in">
+        <section id="contact" class="contact">
           <h2>Contact Me</h2>
           <div class="contact-form">
             <form action="https://api.web3forms.com/submit" method="POST">
