Added linkedin embed and styled it.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <section id="about">
           <h2>About Me</h2>
           <p> Through my academic and personal experiences, I've showcased my ability to persevere through adversity. Embracing these hardships has fortified my determination to succeed academically and in my personal life. I continue to stay dedicated to my craft while on this rigorous journey. I continue to express passion for programming; I've demonstrated my ability to ensure my work is up to standard. As many more challenges are on the horizon, my ability to persevere will continue to propel me past them. </p>
+          <div class="linkedin-embed">
+            <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7219984426649231360" height="900" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+          </div>
         </section>
         <section id="coursework" class="about">
           <h2>Applicable Coursework</h2>
