added view old portfolio
added a link to view old portfolio in the projects section. links to my old portfolio website

--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
 											<a href="https://github.com/BabikerBabiker/Rainfall-Calculator" class="special">Repository</a>
 											<a href="https://youtu.be/_xVGM1L4liY" class="special">Live Demo</a>
 										</article>
+
+										<a href="https://bbabiker.com/v1">View Old Portfolio Website</a>
 									</section>
 									<button id="toggle-projects" class="button">Browse</button>
 								</div>
