added alt tags and cleaned up
- added alt tags to image for search engines

- removed previous assets and organized

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<!-- One -->
 						<section id="one" class="wrapper spotlight style1">
 							<div class="inner">
-								<a href="#" class="image"><img src="merged/Profile Picture.png" alt="" /></a>
+								<a href="#" class="image"><img src="merged/Profile Picture.png" alt="Babiker Babiker" /></a>
 								<div class="content">
 									<h2 class="major">About Me</h2>
 									<p>Through my academic and personal experiences, I've showcased my ability to persevere through adversity. Embracing these hardships has fortified my determination to succeed academically and in my personal life. I continue to stay dedicated to my craft while on this rigorous journey. I continue to express passion for programming; I've demonstrated my ability to ensure my work is up to standard. As many more challenges are on the horizon, my ability to persevere will continue to propel me past them.</p>
@@ -66,7 +66,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="merged/education.png" alt="" /></a>
+									<a href="#" class="image"><img src="merged/education.png" alt="Babiker Babiker" /></a>
 									<div class="content">
 										<h2 class="major">Education</h2>
 										<p><b>California State University, Fullerton | May 2026</b></p>
@@ -87,7 +87,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="merged/skills.png" alt="" /></a>
+									<a href="#" class="image"><img src="merged/skills.png" alt="Babiker Babiker" /></a>
 									<div class="content">
 										<h2 class="major">Skills</h2>
 										<h3 class="major">Programming Languages & Technologies</h3>
@@ -108,14 +108,14 @@
 									<p>Below are various projects I've worked on. Feel free to checkout the <u>repository</u> & <u>live demo</u> for each one!</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="merged/FinanceFirst.png" alt="" class="project-image"/></a>
+											<a href="#" class="image"><img src="merged/FinanceFirst.png" alt="Babiker Babiker" class="project-image"/></a>
 											<h3 class="major">FinanceFirst</h3>
 											<p>Banking app which allows for deposits, withdraws, and transferring of money. Uses an SQLite 3 database to effectively & securely store data.</p>
 											<a href="https://github.com/BabikerBabiker/FinanceFirst" class="special">Repository</a>
 										</article>
 
 										<article>
-											<a href="#" class="image"><img src="merged/IceMan.png" alt="" class="project-image"/></a>
+											<a href="#" class="image"><img src="merged/IceMan.png" alt="Babiker Babiker" class="project-image"/></a>
 											<h3 class="major">IceMan</h3>
 											<p>Interactive game using OpenGL that allows user to mine ice, find oil, and escape protestors as its main objectives.</p>
 											<a href="https://github.com/BabikerBabiker/IceMan-Project" class="special">Repository</a>
@@ -123,7 +123,7 @@
 										</article>
 
 										<article>
-											<a href="#" class="image"><img src="merged/CurrencyXChange.png" alt="" class="project-image"/></a>
+											<a href="#" class="image"><img src="merged/CurrencyXChange.png" alt="Babiker Babiker" class="project-image"/></a>
 											<h3 class="major">Currency X Change</h3>
 											<p>Console-Based application that allows support for over 150 currencies and their conversions. Simple menu to navigate.</p>
 											<a href="https://github.com/BabikerBabiker/Currency-X-Change" class="special">Repository</a>
@@ -131,7 +131,7 @@
 										</article>
 
 										<article>
-											<a href="#" class="image"><img src="merged/ValidCPP.png" alt="" class="project-image"/></a>
+											<a href="#" class="image"><img src="merged/ValidCPP.png" alt="Babiker Babiker" class="project-image"/></a>
 											<h3 class="major">ValidCPP</h3>
 											<p>A C++ syntax validation program that checks a .cpp file for balanced quotes, brackets, parenthesis etc.</p>
 											<a href="https://github.com/babikerbabiker/validcpp" class="special">Repository</a>
@@ -139,21 +139,21 @@
 										</article>
 
 										<article class="hidden-project">
-											<a href="#" class="image"><img src="merged/martiandb.png" alt="" class="project-image"/></a>
+											<a href="#" class="image"><img src="merged/martiandb.png" alt="Babiker Babiker" class="project-image"/></a>
 											<h3 class="major">Martian Database</h3>
 											<p>C++ application that manages a database of Martian individuals. Users can add, delete by SSN, and print entries sorted by first name, last name, or SSN.</p>
 											<a href="https://github.com/BabikerBabiker/MartianDB" class="special">Repository</a>
 										</article>
 
 										<article class="hidden-project">
-											<a href="#" class="image"><img src="merged/wordshuffle.png" alt="" class="project-image"/></a>
+											<a href="#" class="image"><img src="merged/wordshuffle.png" alt="Babiker Babiker" class="project-image"/></a>
 											<h3 class="major">WordShuffle</h3>
 											<p>WordShuffle reads a dictionary file, finds anagrams of a user-input string using sorting and permutation algorithms, and displays results via command line.</p>
 											<a href="https://github.com/BabikerBabiker/WordShuffle" class="special">Repository</a>
 										</article>
 
 										<article class="hidden-project">
-											<a href="#" class="image"><img src="merged/GuessQuest.jpg" alt="" class="project-image"/></a>
+											<a href="#" class="image"><img src="merged/GuessQuest.jpg" alt="Babiker Babiker" class="project-image"/></a>
 											<h3 class="major">GuessQuest</h3>
 											<p>Guess that target number! User starts off with $1000 and loses $100 per wrong guess. Try to guess in the least amount of guesses as possible!</p>
 											<a href="https://github.com/BabikerBabiker/GuessQuest" class="special">Repository</a>
@@ -161,7 +161,7 @@
 										</article>
 
 										<article class="hidden-project">
-											<a href="#" class="image"><img src="merged/Rainfall.png" alt="" class="project-image"/></a>
+											<a href="#" class="image"><img src="merged/Rainfall.png" alt="Babiker Babiker" class="project-image"/></a>
 											<h3 class="major">Rainfall Calculator</h3>
 											<p>Receives user-reported rainfall for each month and performs various tasks such as sorting, average, and total.</p>
 											<a href="https://github.com/BabikerBabiker/Rainfall-Calculator" class="special">Repository</a>
