--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-XF8H3V45MZ"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-XF8H3V45MZ');
+		</script>
+		
 		<title>Babiker's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -38,7 +47,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
+							<div class="logo"><span class="icon fa-person"></span></div>
 							<h2>Babiker I. Babiker</h2>
 							<p>CS Student @ <br>California State University, Fullerton</p>
 							<p>Software Engineering Fellow @ <br>Headstarter AI</p>
@@ -108,14 +117,14 @@
 									<p>Below are various projects I've worked on. Feel free to checkout the <u>repository</u> & <u>live demo</u> for each one!</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="merged/FinanceFirst.png" alt="Babiker Babiker" class="project-image"/></a>
+											<a href="https://github.com/BabikerBabiker/FinanceFirst" class="image"><img src="merged/FinanceFirst.png" alt="Babiker Babiker" class="project-image"/></a>
 											<h3 class="major">FinanceFirst</h3>
 											<p>Banking app which allows for deposits, withdraws, and transferring of money. Uses an SQLite 3 database to effectively & securely store data.</p>
 											<a href="https://github.com/BabikerBabiker/FinanceFirst" class="special">Repository</a>
 										</article>
 
 										<article>
-											<a href="#" class="image"><img src="merged/IceMan.png" alt="Babiker Babiker" class="project-image"/></a>
+											<a href="https://github.com/BabikerBabiker/IceMan-Project" class="image"><img src="merged/IceMan.png" alt="Babiker Babiker" class="project-image"/></a>
 											<h3 class="major">IceMan</h3>
 											<p>Interactive game using OpenGL that allows user to mine ice, find oil, and escape protestors as its main objectives.</p>
 											<a href="https://github.com/BabikerBabiker/IceMan-Project" class="special">Repository</a>
@@ -123,7 +132,7 @@
 										</article>
 
 										<article>
-											<a href="#" class="image"><img src="merged/CurrencyXChange.png" alt="Babiker Babiker" class="project-image"/></a>
+											<a href="https://github.com/BabikerBabiker/Currency-X-Change" class="image"><img src="merged/CurrencyXChange.png" alt="Babiker Babiker" class="project-image"/></a>
 											<h3 class="major">Currency X Change</h3>
 											<p>Console-Based application that allows support for over 150 currencies and their conversions. Simple menu to navigate.</p>
 											<a href="https://github.com/BabikerBabiker/Currency-X-Change" class="special">Repository</a>
@@ -131,7 +140,7 @@
 										</article>
 
 										<article>
-											<a href="#" class="image"><img src="merged/ValidCPP.png" alt="Babiker Babiker" class="project-image"/></a>
+											<a href="https://github.com/babikerbabiker/validcpp" class="image"><img src="merged/ValidCPP.png" alt="Babiker Babiker" class="project-image"/></a>
 											<h3 class="major">ValidCPP</h3>
 											<p>A C++ syntax validation program that checks a .cpp file for balanced quotes, brackets, parenthesis etc.</p>
 											<a href="https://github.com/babikerbabiker/validcpp" class="special">Repository</a>
@@ -139,21 +148,21 @@
 										</article>
 
 										<article class="hidden-project">
-											<a href="#" class="image"><img src="merged/martiandb.png" alt="Babiker Babiker" class="project-image"/></a>
+											<a href="https://github.com/BabikerBabiker/MartianDB" class="image"><img src="merged/martiandb.png" alt="Babiker Babiker" class="project-image"/></a>
 											<h3 class="major">Martian Database</h3>
 											<p>C++ application that manages a database of Martian individuals. Users can add, delete by SSN, and print entries sorted by first name, last name, or SSN.</p>
 											<a href="https://github.com/BabikerBabiker/MartianDB" class="special">Repository</a>
 										</article>
 
 										<article class="hidden-project">
-											<a href="#" class="image"><img src="merged/wordshuffle.png" alt="Babiker Babiker" class="project-image"/></a>
+											<a href="https://github.com/BabikerBabiker/WordShuffle" class="image"><img src="merged/wordshuffle.png" alt="Babiker Babiker" class="project-image"/></a>
 											<h3 class="major">WordShuffle</h3>
 											<p>WordShuffle reads a dictionary file, finds anagrams of a user-input string using sorting and permutation algorithms, and displays results via command line.</p>
 											<a href="https://github.com/BabikerBabiker/WordShuffle" class="special">Repository</a>
 										</article>
 
 										<article class="hidden-project">
-											<a href="#" class="image"><img src="merged/GuessQuest.jpg" alt="Babiker Babiker" class="project-image"/></a>
+											<a href="https://github.com/BabikerBabiker/GuessQuest" class="image"><img src="merged/GuessQuest.jpg" alt="Babiker Babiker" class="project-image"/></a>
 											<h3 class="major">GuessQuest</h3>
 											<p>Guess that target number! User starts off with $1000 and loses $100 per wrong guess. Try to guess in the least amount of guesses as possible!</p>
 											<a href="https://github.com/BabikerBabiker/GuessQuest" class="special">Repository</a>
@@ -161,7 +170,7 @@
 										</article>
 
 										<article class="hidden-project">
-											<a href="#" class="image"><img src="merged/Rainfall.png" alt="Babiker Babiker" class="project-image"/></a>
+											<a href="https://github.com/BabikerBabiker/Rainfall-Calculator" class="image"><img src="merged/Rainfall.png" alt="Babiker Babiker" class="project-image"/></a>
 											<h3 class="major">Rainfall Calculator</h3>
 											<p>Receives user-reported rainfall for each month and performs various tasks such as sorting, average, and total.</p>
 											<a href="https://github.com/BabikerBabiker/Rainfall-Calculator" class="special">Repository</a>
