added revisions for clarity

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		gtag('config', 'G-XF8H3V45MZ');
 		</script>
 		
-		<title>Babiker's Portfolio</title>
+		<title>Babiker Babiker</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -227,7 +227,7 @@
 								<li class="icon brands fa-github"><a href="https://www.github.com/babikerbabiker">github.com/babikerbabiker</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Babiker I. Babiker's Portfolio</li>
+								<li>&copy; Babiker I. Babker</li>
 								<li>All rights reserved.</li>
 							</ul>
 							<img src="./merged/Signature.png" alt="Signature" class="signature" />
