--- a/index.html
+++ b/index.html
@@ -25,24 +25,9 @@
 					<header id="header" class="alt">
 						<h1><a href="index.html">Babiker I. Babiker</a></h1>
 						<nav>
-							<a href="#menu">Menu</a>
+							<a href="#footer">Contact</a>
 						</nav>
 					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>Menu</h2>
-							<ul class="links">
-								<li><a href="#one">About</a></li>
-								<li><a href="#two">Education</a></li>
-								<li><a href="#three">Skills</a></li>
-								<li><a href="#four">Projects</a></li>
-								<li><a href="#footer">Contact</a></li>
-							</ul>
-							<a href="#" class="close">Close</a>
-						</div>
-					</nav>
 
 				<!-- Banner -->
 					<section id="banner">
