made changes to contact button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<header id="header" class="alt">
 						<h1><a href="index.html">Babiker I. Babiker</a></h1>
 						<nav>
-							<a href="#footer">Contact</a>
+							<a href="#footer"><b>Contact</b></a>
 						</nav>
 					</header>
 
