added changes to viewing

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 										<a href="https://bbabiker.com/v1">View Old Portfolio Website</a>
 									</section>
-									<button id="toggle-projects" class="button">Browse</button>
+									<button id="toggle-projects" class="button">View All Projects</button>
 								</div>
 							</section>
 							
@@ -175,7 +175,7 @@
 									hiddenProjects.forEach(function(project) {
 										project.style.display = isVisible ? 'none' : 'block';
 									});
-									this.textContent = isVisible ? 'Browse' : 'Collapse';
+									this.textContent = isVisible ? 'View All Projects' : 'Collapse';
 								});
 							</script>
 					</section>
@@ -212,7 +212,7 @@
 								<li class="icon brands fa-github"><a href="https://www.github.com/babikerbabiker">github.com/babikerbabiker</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Babiker I. Babker</li>
+								<li>&copy; Babiker I. Babiker</li>
 								<li>All rights reserved.</li>
 							</ul>
 							<img src="./merged/Signature.png" alt="Signature" class="signature" />
