changed design landing page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Babiker I. Babiker</h2>
-							<p>CS Student @ <br>California State University, Fullerton</p>
+							<p>Computer Science Student @ <br>California State University, Fullerton</p>
 							<p>Software Engineering Fellow @ <br>Headstarter AI</p>
 						</div>
 					</section>
