--- a/projects.html
+++ b/projects.html
@@ -1,16 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-XF8H3V45MZ"></script>
-		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-
-		gtag('config', 'G-XF8H3V45MZ');
-		</script>
-		
-		<title>Babiker Babiker</title>
+		<title>Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,83 +13,32 @@
 			<div id="page-wrapper">
 
 				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Babiker I. Babiker</a></h1>
-						<nav>
-							<a href="#footer"><b>Contact</b></a>
-						</nav>
-					</header>
+				<header id="header" class="alt">
+					<h1><a href="index.html">Babiker I. Babiker</a></h1>
+					<nav>
+						<a href="#footer"><b>Contact</b></a>
+					</nav>
+				</header>
 
 				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<h2>Babiker I. Babiker</h2>
-							<p>Computer Science Student @ <br>California State University, Fullerton</p>
-							<p>Software Engineering Fellow @ <br>Headstarter AI</p>
-						</div>
-					</section>
+				<section id="banner">
+					<div class="inner">
+						<h2>Babiker I. Babiker</h2>
+						<p>Computer Science Student @ <br>California State University, Fullerton</p>
+						<p>Software Engineering Fellow @ <br>Headstarter AI</p>
+					</div>
+				</section>
 
 				<!-- Wrapper -->
 					<section id="wrapper">
-
-						<!-- One -->
-						<section id="one" class="wrapper spotlight style1">
-							<div class="inner">
-								<a href="#" class="image"><img src="merged/Profile Picture.png" alt="Babiker Babiker" /></a>
-								<div class="content">
-									<h2 class="major">About Me</h2>
-									<p>Through my academic and personal experiences, I've showcased my ability to persevere through adversity. Embracing these hardships has fortified my determination to succeed academically and in my personal life. I continue to stay dedicated to my craft while on this rigorous journey. I continue to express passion for programming; I've demonstrated my ability to ensure my work is up to standard. As many more challenges are on the horizon, my ability to persevere will continue to propel me past them.</p>
-									<a href="https://www.linkedin.com/in/babiker-babiker-15915b267" class="special">LinkedIn</a>
-									<div class="embed-container">
-										<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7219984426649231360" class="linkedin-embed" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
-									</div>
-								</div>
-							</div>
-						</section>
-
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
+						<!-- Content -->
+							<div class="wrapper">
 								<div class="inner">
-									<a href="#" class="image"><img src="merged/education.png" alt="Babiker Babiker" /></a>
-									<div class="content">
-										<h2 class="major">Education</h2>
-										<p><b>California State University, Fullerton | May 2026</b></p>
-										<p>Bachelor of Science: Computer Science</p>
 
-										<p><b>El Camino College | June 2024</b></p>
-										<p>Computer Science Certificate of Achievement</p>
-										<ul>
-											<li>Coursework: Computing in C++, Data Structures, Computing in Java, Advanced C++</li>
-										</ul>
+									<h3 class="major">Projects</h3>
+									<p>Here, you'll find a diverse collection of projects that showcase my skills and passion for software development. Some of these projects are personal endeavors, reflecting my dedication to continuous learning and innovation. Others were developed through collaborative efforts, where I had the opportunity to work with peers and apply my knowledge to real-world challenges. Each project highlights my ability to tackle complex problems, adapt to different technologies, and deliver effective solutions. Explore my work and see how I've grown as a developer through these experiences.</p>
+									<h3 class="major"></h3>
 
-										<p><b>Hawthorne Math & Science Academy</b></p>
-										<p>Certificate of Proficiency: California High School Proficiency Exam</p>
-									</div>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="#" class="image"><img src="merged/skills.png" alt="Babiker Babiker" /></a>
-									<div class="content">
-										<h2 class="major">Skills</h2>
-										<h3 class="major">Programming Languages & Technologies</h3>
-											<p>C++, Java, SQL, HTML, CSS, Python</p>
-										<h3 class="major">Software Development & Tools</h3>
-											<p>Data Structures, Object Oriented Programming, API. Visual Studio, VS Code, Eclipse IDE, GitHub, Git</p>
-										<h3 class="major">Operating Systems & Applications</h3>
-											<p>Windows, Linux, macOS, MS Office, Google Suite</p>
-										<h3 class="major">Languages & Soft Skills</h3>
-											<p>English, Arabic, Spanish, Time Managament, Leadership, Communication, Adaptability</p>
-									</div>
-								</div>
-							</section>
-						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
-								<div class="inner">
-									<h2 class="major">Projects</h2>
-									<p>Below are various projects I've worked on. Feel free to checkout the <u>repository</u> & <u>live demo</u> for each one!</p>
 									<section class="features">
 										<article>
 											<a href="https://github.com/BabikerBabiker/FinanceFirst" class="image"><img src="merged/FinanceFirst.png" alt="Babiker Babiker" class="project-image"/></a>
@@ -130,11 +70,41 @@
 											<a href="https://github.com/babikerbabiker/validcpp" class="special">Repository</a>
 											<a href="https://youtu.be/wvVoYRpf4lU" class="special">Live Demo</a>
 										</article>
-										<a href="https://bbabiker.com/v1">View Old Portfolio Website</a>
+										
+										<article>
+											<a href="https://github.com/BabikerBabiker/MartianDB" class="image"><img src="merged/martiandb.png" alt="Babiker Babiker" class="project-image"/></a>
+											<h3 class="major">Martian Database</h3>
+											<p>C++ application that manages a database of Martian individuals. Users can add, delete by SSN, and print entries sorted by first name, last name, or SSN.</p>
+											<a href="https://github.com/BabikerBabiker/MartianDB" class="special">Repository</a>
+										</article>
+
+										<article>
+											<a href="https://github.com/BabikerBabiker/WordShuffle" class="image"><img src="merged/wordshuffle.png" alt="Babiker Babiker" class="project-image"/></a>
+											<h3 class="major">WordShuffle</h3>
+											<p>WordShuffle reads a dictionary file, finds anagrams of a user-input string using sorting and permutation algorithms, and displays results via command line.</p>
+											<a href="https://github.com/BabikerBabiker/WordShuffle" class="special">Repository</a>
+										</article>
+
+										<article>
+											<a href="https://github.com/BabikerBabiker/GuessQuest" class="image"><img src="merged/GuessQuest.jpg" alt="Babiker Babiker" class="project-image"/></a>
+											<h3 class="major">GuessQuest</h3>
+											<p>Guess that target number! User starts off with $1000 and loses $100 per wrong guess. Try to guess in the least amount of guesses as possible!</p>
+											<a href="https://github.com/BabikerBabiker/GuessQuest" class="special">Repository</a>
+											<a href="https://youtu.be/9wJAS5VMF90" class="special">Live Demo</a>
+										</article>
+
+										<article>
+											<a href="https://github.com/BabikerBabiker/Rainfall-Calculator" class="image"><img src="merged/Rainfall.png" alt="Babiker Babiker" class="project-image"/></a>
+											<h3 class="major">Rainfall Calculator</h3>
+											<p>Receives user-reported rainfall for each month and performs various tasks such as sorting, average, and total.</p>
+											<a href="https://github.com/BabikerBabiker/Rainfall-Calculator" class="special">Repository</a>
+											<a href="https://youtu.be/_xVGM1L4liY" class="special">Live Demo</a>
+										</article>
 									</section>
-									<a href="projects.html" id="toggle-projects" class="button">View All Projects</a>
+
 								</div>
-							</section>
+							</div>
+
 					</section>
 
 					<section id="footer">
@@ -175,7 +145,6 @@
 							<img src="./merged/Signature.png" alt="Signature" class="signature" />
 						</div>
 					</section>
-
 			</div>
 
 		<!-- Scripts -->
