updated project desc

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Projects</h2>
-									<p>Below are various projects I've worked on. Feel free to checkout the <u>repository</u> & <u>live demo</u> for each one!</p>
+									<p>Here, you'll find a diverse collection of projects that showcase my skills and passion for software development. Some of these projects are personal endeavors, reflecting my dedication to continuous learning and innovation. Others were developed through collaborative efforts, where I had the opportunity to work with peers and apply my knowledge to real-world challenges. Each project highlights my ability to tackle complex problems, adapt to different technologies, and deliver effective solutions. Explore my work and see how I've grown as a developer through these experiences.</u> for each one!</p>
 									<section class="features">
 										<article>
 											<a href="https://github.com/BabikerBabiker/FinanceFirst" class="image"><img src="merged/FinanceFirst.png" alt="Babiker Babiker" class="project-image"/></a>
