--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
 								<div class="content">
 									<h2 class="major">About Me</h2>
 									<p>Through my academic and personal experiences, I've showcased my ability to persevere through adversity. Embracing these hardships has fortified my determination to succeed academically and in my personal life. I continue to stay dedicated to my craft while on this rigorous journey. I continue to express passion for programming; I've demonstrated my ability to ensure my work is up to standard. As many more challenges are on the horizon, my ability to persevere will continue to propel me past them.</p>
-									<a href="https://www.linkedin.com/in/babiker-babiker-15915b267" class="special">LinkedIn</a>
 									<div class="embed-container">
 										<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7219984426649231360" class="linkedin-embed" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
 									</div>
+									<a href="https://www.linkedin.com/in/babiker-babiker-15915b267" class="special">LinkedIn</a>
+									<button><a href="merged/Resume.pdf">Download Resume</a></button>
 								</div>
 							</div>
 						</section>
@@ -130,7 +131,7 @@
 											<a href="https://github.com/babikerbabiker/validcpp" class="special">Repository</a>
 											<a href="https://youtu.be/wvVoYRpf4lU" class="special">Live Demo</a>
 										</article>
-										<a href="https://bbabiker.com/v1">View Old Portfolio Website</a>
+										<a href="https://bbabiker.com/v1" class="special">View V1 Portfolio</a>
 									</section>
 									<a href="projects.html" id="toggle-projects" class="button">View All Projects</a>
 								</div>
