updated button to resume

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 										<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7219984426649231360" class="linkedin-embed" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
 									</div>
 									<a href="https://www.linkedin.com/in/babiker-babiker-15915b267" class="special">LinkedIn</a>
-									<button><a href="merged/Resume.pdf">Download Resume</a></button>
+									<button><a href="merged/resume.pdf">Download Resume</a></button>
 								</div>
 							</div>
 						</section>
