added github redirect

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 									<div class="embed-container">
 										<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7219984426649231360" class="linkedin-embed" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
 									</div>
-									<a href="https://www.linkedin.com/in/babiker-babiker-15915b267" class="special">LinkedIn</a>
-									<button><a href="resume.pdf">Download Resume</a></button>
+									<a href="https://bbabiker.com/linkedin" class="special">LinkedIn</a>
+									<button><a href="https://bbabiker.com/resume">Download Resume</a></button>
 								</div>
 							</div>
 						</section>
@@ -166,8 +166,8 @@
 							</div>
 							<ul class="contact">
 								<li class="icon solid fa-envelope"><a href="mailto:bbabiker09@gmail.com">bbabiker09@gmail.com</a></li>
-								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/babiker-babiker-15915b267">linkedin.com/in/babiker-babiker-15915b267/</a></li>
-								<li class="icon brands fa-github"><a href="https://www.github.com/babikerbabiker">github.com/babikerbabiker</a></li>
+								<li class="icon brands fa-linkedin"><a href="https://bbabiker.com/linkedin">linkedin.com/in/babiker-babiker-15915b267/</a></li>
+								<li class="icon brands fa-github"><a href="https://bbabiker.com/github">github.com/babikerbabiker</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Babiker I. Babiker</li>
