updated resume button

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <p><strong>Name: </strong> <span>Babiker Babiker</span></p>
                 <p><strong>Email: </strong> <span>bbabiker09@gmail.com</span></p>
                 <p><strong>Phone: </strong> <span>(310) 844-4603</span></p>
-                <button type="submit" class="btn-common"><a href="https://bbabiker.com/resume">Resume</a></button>
+                <button type="submit" class="btn-common"><a href="resume.html">Resume</a></button>
               </div>
             </div>
 
