--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         <a href="mailto:bbabiker09@gmail.com"><i class="bi bi-inboxes-fill"></i></a>
       </div>
       <div class="signature text-center">
-        <img src="assets/img/signature.png" alt="Signature" class="img-fluid">
+        <img src="assets/img/Signature.png" alt="Signature" class="img-fluid">
       </div>
     </div>
   </footer>
