updated form logic

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         </div>
     
         <div class="d-flex justify-content-center" data-aos="fade-up" data-aos-delay="400">
-          <form action="https://formsubmit.co/bbabiker09@gmail.com" method="POST" role="form" class="php-email-form">
+          <form action="https://formspree.io/f/xwpevdoz" method="POST" role="form" class="php-email-form">
             <input type="hidden" name="_next" value="https://bbabiker.com/submit.html">
             <div class="row">
               <div class="col form-group">
