--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
         gtag('js', new Date());
         gtag('config', 'G-XF8H3V45MZ');
   </script>
+  <script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:5073242,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Babiker Babiker</title>
@@ -247,7 +257,7 @@
     
         <div class="contact-form-container" data-aos="fade-up" data-aos-delay="400">
           <form action="https://formspree.io/f/xwpevdoz" method="POST" role="form" class="php-email-form">
-            <input type="hidden" name="_next" value="https://bbabiker.com/submit.html">
+            <input type="hidden" name="_next" value="">
             <div class="row">
               <div class="col form-group">
                 <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
