--- a/linkedin.html
+++ b/linkedin.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:5073242,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
     <meta http-equiv="refresh" content="0; url=https://www.linkedin.com/in/babiker-babiker-15915b267/" />
     <title>Redirecting...</title>
 </head>
