--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     window.heapReadyCb=window.heapReadyCb||[],window.heap=window.heap||[],heap.load=function(e,t){window.heap.envId=e,window.heap.clientConfig=t=t||{},window.heap.clientConfig.shouldFetchServerConfig=!1;var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src="https://cdn.us.heap-api.com/config/"+e+"/heap_config.js";var r=document.getElementsByTagName("script")[0];r.parentNode.insertBefore(a,r);var n=["init","startTracking","stopTracking","track","resetIdentity","identify","getSessionId","getUserId","getIdentity","addUserProperties","addEventProperties","removeEventProperty","clearEventProperties","addAccountProperties","addAdapter","addTransformer","addTransformerFn","onReady","addPageviewProperties","removePageviewProperty","clearPageviewProperties","trackPageview"],i=function(e){return function(){var t=Array.prototype.slice.call(arguments,0);window.heapReadyCb.push({name:e,fn:function(){heap[e]&&heap[e].apply(heap,t)}})}};for(var p=0;p<n.length;p++)heap[n[p]]=i(n[p])};
     heap.load("2116135735");
   </script>
+  <meta name="description" content="Babiker Babiker's portfolio showcasing projects, education, and professional experience. Explore my work and contact me for opportunities.">
+  <meta name="keywords" content="Babiker Babiker, portfolio, computer science, CSU Fullerton, SWE Fellow, Headstarter AI, programming, projects">
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Babiker Babiker</title>
@@ -69,7 +71,7 @@
       <img src="assets/img/code.png" alt="" data-aos="fade-in">
 
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
-        <h2>I am Babiker Babiker</h2>
+        <h2>Babiker Babiker</h2>
         <p><span class="typed" data-typed-items="Computer Science @ CSU Fullerton, SWE Fellow @ Headstarter AI"></span></p>
       </div>
 
@@ -316,6 +318,25 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Babiker Babiker",
+      "url": "https://bbabiker.com",
+      "sameAs": [
+        "https://www.linkedin.com/in/babiker-babiker-15915b267/",
+        "https://github.com/babikerbabiker"
+      ],
+      "jobTitle": "Software Engineering Fellow",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Headstarter AI"
+      }
+    }
+    </script>
+    
 
 </body>
 
