Added ClearCast Project

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-cpp">C++</li>
             <li data-filter=".filter-java">Java</li>
+            <li data-filter=".filter-python">Python</li>
             <li data-filter=".filter-html">HTML/CSS</li>
             <li data-filter=".filter-cli">CLI</li>
             <li data-filter=".filter-gui">GUI</li>
@@ -167,6 +168,17 @@
               </div>
             </div><!-- End Portfolio Item -->
     
+            <!-- Portfolio Item -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-python filter-gui">
+              <img src="assets/img/ClearCast.png" class="img-fluid project-image" alt="">
+              <div class="portfolio-info">
+                <h4>ClearCast</h4>
+                <p>Sleek weather dashboard app that provides real-time weather updates and forecasts, leveraging geolocation to deliver accurate information directly to your desktop
+                </p>
+                <a href="https://github.com/BabikerBabiker/ClearCast" title="ClearCast Repository" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
             <!-- Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cpp filter-cli">
               <img src="assets/img/ValidCPP.png" class="img-fluid project-image" alt="">
